--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta />
-    <meta />
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <title>Kanban Board</title>
   </head>
 
   <body>
