--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preload" href="/assets/logo-light.svg" as="image" />
     <title>Kanban Board</title>
   </head>
 
   <body>
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
+    <div>
+      <img src="/assets/logo-light.svg" alt="Kanban Board Logo" />
+    </div>
     <nav>
       <div>
         <h4>ALL BOARDS (1)</h4>
