Add sidebar layout styling

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <body>
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
-    <div>
-      <img src="/assets/logo-light.svg" alt="Kanban Board Logo" />
-    </div>
-    <nav>
+    <nav class="sidebar">
+      <div>
+        <img src="/assets/logo-light.svg" alt="Kanban Board Logo" />
+      </div>
       <div>
         <h4>ALL BOARDS (1)</h4>
         <button>Launch Career</button>
