Add header layout and styling

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </nav>
 
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
-    <div>
-      <header>
+    <div class="main-container">
+      <header class="header">
         <div>
           <h2>Launch Career</h2>
         </div>
