Update header styling

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <div class="main-container">
       <header class="header">
         <div>
+          <img
+            src="/assets/logo-light.svg"
+            alt="Kanban Board Header Logo"
+            id="header-logo"
+          />
           <h2>Launch Career</h2>
         </div>
       </header>
